fix layout issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 .navbar {
-    width: 100vw;
     background-color: rgb(0, 0, 0);
     border-bottom: 1px solid white;
     height: 15vh;
@@ -55,7 +54,10 @@ nav a {
     margin: 15px 5px;
     box-shadow: 10px 10px 10px 10px gray;
     border-radius: 10px;
-    /* max-width: 290px; */
+    max-width: 290px;
+    min-width: 290px;
+    max-height: 330px;
+    min-height: 330px;
     /* max-height: 496px; */
     /* object-fit: cover; */
 }
